# LangChainHCCourse1

./: README.md  pyproject.toml
course_1/: Q&A_over_docs.ipynb  agents.ipynb  chains.ipynb  chat_template.ipynb  evaluation.ipynb  hello.ipynb  memory.ipynb  models_prompts_and_output_parsesrs.ipynb
